[gd_scene load_steps=4 format=3 uid="uid://cmr3aolsr6l35"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/branches/EditorChoiceValue.gd" id="1_4mgxx"]
[ext_resource type="Texture2D" uid="uid://c4l5p4t0wt4i8" path="res://addons/hyh.cutscene_graph/icons/icon_remove.svg" id="2_svn0u"]
[ext_resource type="PackedScene" uid="uid://mvafher5yr07" path="res://addons/hyh.cutscene_graph/editor/controls/ConditionControl.tscn" id="3_u0o5g"]

[node name="ChoiceValue" type="MarginContainer"]
offset_right = 306.0
offset_bottom = 136.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_4mgxx")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 10

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VariableContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="DisplayContainer" type="GridContainer" parent="HBoxContainer/VariableContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/VariableContainer/DisplayContainer"]
layout_mode = 2
text = "Display:"

[node name="DisplayEdit" type="LineEdit" parent="HBoxContainer/VariableContainer/DisplayContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBoxContainer/VariableContainer/DisplayContainer"]
layout_mode = 2
text = "Translation Key:"

[node name="TranslationKeyEdit" type="LineEdit" parent="HBoxContainer/VariableContainer/DisplayContainer"]
layout_mode = 2

[node name="RemoveButton" type="Button" parent="HBoxContainer/VariableContainer"]
layout_mode = 2
size_flags_vertical = 0
icon = ExtResource("2_svn0u")
flat = true

[node name="ConditionControl" parent="HBoxContainer" instance=ExtResource("3_u0o5g")]
layout_mode = 2

[connection signal="text_changed" from="HBoxContainer/VariableContainer/DisplayContainer/DisplayEdit" to="." method="_on_DisplayEdit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/VariableContainer/DisplayContainer/TranslationKeyEdit" to="." method="_on_TranslationKeyEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/VariableContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="set_condition_requested" from="HBoxContainer/ConditionControl" to="." method="_on_conditional_control_set_condition_requested"]
